--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storypointer",
-  "version": "1.6.1",
+  "version": "1.7.0",
   "description": "Small CLI tool to set JIRA Story Points and Priority",
   "main": "src/main.ts",
   "type": "commonjs",
@@ -31,7 +31,8 @@
     "cli",
     "jira",
     "storypoints",
-    "priority"
+    "priority",
+    "severity"
   ],
   "dependencies": {
     "@inquirer/select": "^2.4.7",
