--- a/package.json
+++ b/package.json
@@ -35,21 +35,21 @@
     "severity"
   ],
   "dependencies": {
-    "@inquirer/select": "^2.4.7",
-    "@total-typescript/ts-reset": "^0.6.0",
-    "chalk": "^5.3.0",
-    "commander": "^12.1.0",
-    "dotenv": "^16.4.5",
-    "jira.js": "^4.0.1",
-    "zod": "^3.23.8"
+    "@inquirer/select": "4.0.1",
+    "@total-typescript/ts-reset": "0.6.1",
+    "chalk": "5.3.0",
+    "commander": "12.1.0",
+    "dotenv": "16.4.5",
+    "jira.js": "4.0.2",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.1.0",
-    "@vitest/coverage-v8": "^2.0.5",
-    "esbuild": "^0.24.0",
-    "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
-    "vitest": "^2.0.5"
+    "@types/node": "22.8.7",
+    "@vitest/coverage-v8": "2.1.4",
+    "esbuild": "0.24.0",
+    "prettier": "3.3.3",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.3",
+    "vitest": "2.1.4"
   }
 }
